[package]
name = "python-package-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
tempfile = "3.3.0"
